package com.bcopstein.v3;

public class CalculadoraValorBruto {
    public int calcular(int valorHora, int quantidadeDeHoras) {
        return valorHora * quantidadeDeHoras;
    }
}
