package com.bcopstein.v4;

public record CustoServicoDTO(int valorBruto,int desconto, int issqn, int valorPagar) {
}
