package com.bcopstein.v4;

public enum Estado {
    RS,SC
}
