package com.bcopstein.v4;

public enum Promocao {
    SEMPROMO,PRIMEIRACOMPRA,BLACKFRIDAY 
}
